--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -17,90 +17,119 @@
 <body>
 
 
-Services
-Product
-Vision
-Features
-About
-Contact
+<nav>
+  <a href='#'>Services</a>
+  <a href='#'>Product</a>
+  <a href='#'>Vision</a>
+  <a href='#'>Features</a>
+  <a href='#'>About</a>
+  <a href='#'>Contact</a>
+</nav>
 
 <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
-Services
+<section>
+  <h2>Services</h2>
+  
+  Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+</section>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+<hr />
+
+<section>
+  
+  <h5>Digital Design</h5>
+  
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <button>Learn More</button>
+  
+  
+  
+  <h5>UX / UI</h5>
+  
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <button>Learn More</button>
+  
+  
+  
+  <h5>Digital Marketing</h5>
+  
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <button>Learn More</button>
+  
+  
+  
+  <h5>Web Development</h5>
+  
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <button>Learn More</button>
+  
+  
+  
+  <h5>iOS Development</h5>
+  
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <button>Learn More</button>
+  
+  
+  
+  <h5>Android Development</h5>
+  
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <button>Learn More</button>
+</section>
+
+<hr />
+
+<section>
+  <h5>Some Facts About Our Services</h5>
+
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
 
 
-Digital Design
+  <ul>
+    <li>Awesome thing</li>
+    <li>Amazing thing</li>
+    <li>Cool thing</li>
+    <li>Great thing</li>
+  </ul>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+</section>
 
-Learn More
-
-
-
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
 
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 
-Copyright Great Idea! 2018
+<footer>Copyright Great Idea! 2018</footer>
 
 </body>
 
