--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -17,16 +17,18 @@
 <body>
 
 
-<nav>
-  <a href='#'>Services</a>
-  <a href='#'>Product</a>
-  <a href='#'>Vision</a>
-  <a href='#'>Features</a>
-  <a href='#'>About</a>
-  <a href='#'>Contact</a>
-</nav>
-
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+<header class="nav-and-logo">
+  <nav class="nav-links">
+    <a href='#'>Services</a>
+    <a href='#'>Product</a>
+    <a href='#'>Vision</a>
+    <a href='#'>Features</a>
+    <a href='#'>About</a>
+    <a href='#'>Contact</a>
+  </nav>
+  
+  <img class="logo-services" src="img/logo.png" alt="Great Idea! Company logo.">
+</header>
 
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
