--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -33,7 +33,7 @@
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
-<section>
+<section class="services-upper-text">
   <h2>Services</h2>
   
   Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
@@ -41,16 +41,18 @@
 
 <hr />
 
-<section>
+<section class="services-boxes">
   
-  <h5>Digital Design</h5>
-  
-  <p>
-    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.
-  </p>
-  
-  <button>Learn More</button>
+<div class="box1">
+    <h5>Digital Design</h5>
+    
+    <p>
+      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.
+    </p>
+    
+    <button>Learn More</button>
+</div>
   
   
   
