CSS for services.html complete. Still need to refactor for index.html

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -131,7 +131,7 @@
       eleifend. Mauris euismod facilisis iaculis.
     </p>
 
-    <ul>
+    <ul class="things-list">
       <li>Awesome thing</li>
       <li>Amazing thing</li>
       <li>Cool thing</li>
